@@ -5,6 +5,8 @@ python-apt (0.8.0~exp1) UNRELEASED; urgency=low
   * Add apt_pkg.Group class, wrapping pkgCache::GrpIterator
   * Change apt_pkg.Cache() so that passing None for 'progress' results in
     no progress output
+  * Support (name, arch) tuples in apt_pkg.Cache mappings, wrapping
+    FindPkg() with two string parameters.
 
  -- Julian Andres Klode <jak@debian.org>  Tue, 05 Apr 2011 10:33:54 +0200
 
